--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-GB"
-title                    : "Your Name / Site Title"
+title                    : "Rohan Gadiyar Varadaraj"
 title_separator          : "-"
 name                     : &name "Rohan Gadiyar Varadaraj"
 description              : &description "personal description"
@@ -24,26 +24,27 @@ author:
   avatar           : "profile.png"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "PhD student studying high-redshift galaxies with ground-based telescope, JWST and Euclid."
+  location         : "Oxford"
   employer         : "University of Oxford"
   uri              : # URL
   email            : "rohan.varadaraj at physics.ox.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0006-9953-6471"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
+  NASA/ADS         : "https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FVaradaraj%2C%20R%2FVaradaraj%2C%20Rohan%20G%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FVaradaraj%2C%20R%2FVaradaraj%2C%20R%20%20G%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FVaradaraj%2C%20R%2FVaradaraj%2C%20Rohan%20G%22%20OR%20author_facet_hier%3A%221%2FVaradaraj%2C%20R%2FVaradaraj%2C%20R%20%20G%22)&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20author%3A%22Varadaraj%2C%20R.%20G.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "RohanVaradaraj"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
