--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "rohanvaradaraj/rohanvaradaraj.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Rohan Gadiyar Varadaraj"
+  pronouns         : "he/him"  
   bio              : "PhD student studying high-redshift galaxies with ground-based telescope, JWST and Euclid."
   location         : "Oxford"
   employer         : "University of Oxford"
@@ -49,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "rohanvaradaraj"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
